Fixing alignment issues and comments

--- a/todo.css
+++ b/todo.css
@@ -3,11 +3,8 @@
   color: grey;
 }
 
-div.tooltip {	
-    position: absolute;			
-    text-align: center;			
-/*    width: 60px;					*/
-/*    height: 28px;					*/
+div.tooltip {
+    text-align: center;
     padding: 2px;				
     font: 12px sans-serif;		
     background: lightsteelblue;	
